@@ -4,6 +4,9 @@
   "name": "CustomerType",
   "type": "object",
   "properties": {
+    "customerType": {
+      "$ref": "CustomerTypeType.json"
+    },
     "companyName": {
       "$ref": "CompanyNameType.json"
     },
@@ -15,6 +18,26 @@
     },
     "companyLegalStatus": {
       "$ref": "CompanyLegalStatusType.json"
+    },
+    "companyFoundingDate": {
+      "description": "Founding date of the company",
+      "type": "string",
+      "format": "date",
+      "examples": [
+        "2024-08-14"
+      ]
+    },
+    "surname": {
+      "$ref": "SurNameType.json"
+    },
+    "firstname": {
+      "$ref": "FirstNameType.json"
+    },
+    "birthDate": {
+      "$ref": "BirthDateType.json"
+    },
+    "gender": {
+      "$ref": "GenderType.json"
     },
     "domicilAddress": {
       "description": "Domicil Address Type",
@@ -30,21 +53,48 @@
   },
   "additionalProperties": false,
   "required": [
-    "companyName",
-    "companyLegalForm",
-    "localityDomicil",
-    "isDomicilLocalityCorrespondenceAddress"
+    "customerType",
+    "domicilAddress",
+    "isDomicilAddressCorrespondenceAddress"
   ],
-  "if": {
-    "properties": {
-      "isDomicilLocalityCorrespondenceAddress": {
-        "const": false
+  "allOf": [
+    {
+      "if": {
+        "properties": {
+          "isDomicilAddressCorrespondenceAddress": {
+            "const": false
+          }
+        }
+      },
+      "then": {
+        "required": [
+          "correspondenceAddress"
+        ]
+      }
+    },
+    {
+      "if": {
+        "properties": {
+          "customerType": {
+            "const": "private individual"
+          }
+        }
+      },
+      "then": {
+        "required": [
+          "surname",
+          "firstname",
+          "birthDate",
+          "gender"
+        ]
+      },
+      "else": {
+        "required": [
+          "companyName",
+          "companyLegalForm",
+          "companyLegalStatus"
+        ]
       }
     }
-  },
-  "then": {
-    "required": [
-      "localityCorrespondence"
-    ]
-  }
+  ]
 }
