@@ -18,6 +18,8 @@ General improvements and necessary changes for Offer NLPI v1.0.0
     - fixed wrong capitalization of some enum values
 - ContactType (Changed)
     - changed property "contactPhone" to mandatory
+- CustomerType (Changed)
+    - Refactor CustomerType to support private individuals
 - CustomerTypeType (Added)
 - HeaderType (Changed)
     - Extracted content of properties "recipient" and "sender" to "SenderReceiverType"
